# mini_ode_robots

./: .gitignore  BUILDING_ROBOTS.md  CMakeLists.txt  DESIGN_NOTES.md  MENTAL_MODEL.md  Makefile  README.md
examples/: demo_arm.cpp  demo_hexapod.cpp  demo_robot.cpp  demo_sensors.cpp  demo_snake.cpp  demo_terrain.cpp  selfcheck.cpp  test_features.cpp  test_math.cpp
include/mor/: angularmotor.h  bodysensors.h  contactsensor.h  globaldata.h  heightfield.h  joint.h  jointsensor.h  logger.h  mor.h  motor.h  obstacles.h  odehandle.h  oderobot.h  osg_compat.h  pid.h  pose_types.h  primitive.h  raysensor.h  sensor.h  servo.h  simulation.h  substance.h
robots/: arm.cpp  arm.h  hexapod.cpp  hexapod.h  nimm4.cpp  nimm4.h  snake.cpp  snake.h
src/: joint.cpp  odehandle.cpp  oderobot.cpp  primitive.cpp  raysensor.cpp  simulation.cpp  substance.cpp
